# quickhost-plugins

./: .gitignore  README.md
plugins/: requirements-dev.txt
plugins/aws/: .flake8  .gitignore  README.md  requirements-dist.txt  setup.cfg  setup.py
plugins/aws/src/quickhost_aws/: .AWSApp.py.swp  .AWSHost.py.swp  .AWSKeypair.py.swp  AWSApp.py  AWSConfig.py  AWSHost.py  AWSIam.py  AWSInit.py  AWSKeypair.py  AWSNetworking.py  AWSResource.py  AWSSG.py  AWSVpc.py  PluginArgs.py  __init__.py  __main__.py  _temp_data_collector.py  cli_params.py  constants.py  utilities.py
plugins/azure/: setup.py
plugins/azure/src/quickhost_azure/: __init__.py
plugins/null/: setup.cfg  setup.py
plugins/null/src/quickhost_null/: NullApp.py  NullParser.py  __init__.py
