[metadata]
name = quickhost-aws
version = 0.0.1

[options]
install_requires = 
  boto3
  cryptography
  importlib-metadata; python_version >= "3.10"

[options.entry_points]
quickhost_plugin = 
  aws_app = quickhost_aws:load_plugin
  aws_parser = quickhost_aws:get_parser

[tools.setuptools.packages.find]
where = ['src/quickhost_aws']

[flake8]
include = src/quickhost_aws
ignore=E201,E202,E501
exclude=
  .git,
  __pycache__,
  venv*,
  build,
  tmp,
  tests
