[metadata]
name = quickhost-aws
version = 0.0.1

[options]
python_version >= "3.10"
install_requires = 
  quickhost
  pyyaml
  boto3
  cryptography
  importlib-metadata

[options.entry_points]
quickhost_plugin = 
  aws_app = quickhost_aws:load_plugin
  aws_parser = quickhost_aws:get_parser

[tools.setuptools.packages.find]
where = ['src/quickhost_aws']

[flake8]
include = src/quickhost_aws
ignore=E201,E202,E501
exclude=
  .git,
  __pycache__,
  venv*,
  build,
  tmp,
  tests

# If you have a ``setup.cfg`` file you can have a "[devpi:upload]" section with
# ``sdist = 1``, ``wheel = 1`` ``no-vcs = 1``, and ``setupdir-only = 1``
# settings providing defaults for the respective command line options
