[metadata]
name = quickhost-null
version = 0.0.1

[options]
install_requires = 
  importlib-metadata; python_version >= "3.10"

[options.entry_points]
quickhost_plugin = 
    null_app = quickhost_null:load_plugin
    null_parser = quickhost_null:get_parser

[tools.setuptools.packages.find]
where = ['src/quickhost_null']

